Finished LAB: LMS

--- a/ECE661_HW1_Suim_Park.ipynb
+++ b/ECE661_HW1_Suim_Park.ipynb
@@ -51,12 +51,12 @@
    "metadata": {},
    "source": [
     "__Problem 2.1 (3 pts)__ Observe the Adaline shown in Figure 1, fill in the feature _s_ and output _y_ for each pair of inputs given in the truth table. What logic function is this Adaline performing?\n",
-    "| *x<sub>1</sub>*   | *x<sub>2</sub>*   | *s*   | *y*   |\n",
+    "| $x_1$   | $x_2$   | $s$   | $y$   |\n",
     "|------------|------------|------------|------------|\n",
-    "| -1 | -1 | (-1)x2 + (-1)x1 + 1x2 = __-1__ | __-1__ |\n",
-    "| -1 | +1 | (-1)x2 + 1x2 = __0__ | __+1__ |\n",
-    "| +1 | -1 | 1x2 + (-1)x2 = __0__ | __+1__ |\n",
-    "| +1 | +1 | 1x2 + 1x2 = __4__ | __+1__ |"
+    "| -1 | -1 | 2x1 + 2x(-1) + 1x(-1) = __-1__ | __-1__ |\n",
+    "| -1 | +1 | 2x1 + 2x(-1) + 1x1 = __1__ | __+1__ |\n",
+    "| +1 | -1 | 2x1 + 2x1 + 1x(-1) = __3__ | __+1__ |\n",
+    "| +1 | +1 | 2x1 + 2x1 + 1x1 = __5__ | __+1__ |"
    ]
   },
   {
@@ -70,8 +70,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Problem 2.2 (4 pts)__ Propose proper values for weight *w<sub>0</sub>*, *w<sub>1</sub>* and *w<sub>2</sub>* in the Adaline shown in Figure 2 to perform the functionality of a logic __NAND__ function. Fill in the feature *s* for each pair of inputs given in the truth table to prove the functionality is correct. [__Hint__: The truth table of NAND function can be found here. https://en.wikipedia.org/wiki/NAND_logic]\n",
-    "| *x<sub>1</sub>*   | *x<sub>2</sub>*   | *s*   | *y*   |\n",
+    "__Problem 2.2 (4 pts)__ Propose proper values for weight $w_0$, $w_1$ and $w_2$ in the Adaline shown in Figure 2 to perform the functionality of a logic __NAND__ function. Fill in the feature *s* for each pair of inputs given in the truth table to prove the functionality is correct. [__Hint__: The truth table of NAND function can be found here. https://en.wikipedia.org/wiki/NAND_logic]\n",
+    "| $x_1$   | $x_2$   | $s$   | $y$   |\n",
     "|------------|------------|------------|------------|\n",
     "| -1 | -1 |  | +1 |\n",
     "| -1 | +1 |  | +1 |\n",
@@ -83,13 +83,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 1. *w<sub>0</sub>* - *w<sub>1</sub>* - *w<sub>2</sub>* > 0\n",
-    "> 2. *w<sub>0</sub>* - *w<sub>1</sub>* + *w<sub>2</sub>* > 0\n",
-    "> 3. *w<sub>0</sub>* + *w<sub>1</sub>* - *w<sub>2</sub>* > 0\n",
-    "> 4. *w<sub>0</sub>* + *w<sub>1</sub>* + *w<sub>2</sub>* < 0\n",
+    "> 1. $w_0 - w_1 - w_2 > 0$\n",
+    "> 2. $w_0 - w_1 + w_2 > 0$\n",
+    "> 3. $w_0 + w_1 - w_2 > 0$\n",
+    "> 4. $w_0 + w_1 + w_2 < 0$\n",
     "\n",
-    "> Based on the 4 inequalities, *w<sub>0</sub>* > *w<sub>1</sub>*, *w<sub>0</sub>* > *w<sub>2</sub>* and *w<sub>0</sub>* > 0. Therefore, __*w<sub>0</sub>* = 1__ and *w<sub>1</sub>* = 0 or -1 and *w<sub>2</sub>* = 0 or -1.</br>\n",
-    "> After applying various values to find the appropriate *<sub>y</sub>* for each input, the resulting weights are __*w<sub>0</sub>* = 1__, __*w<sub>1</sub>* = -1__, and __*w<sub>2</sub>* = -1__.\n",
+    "> Based on the 4 inequalities, $w_0 > w_1$, $w_0 > w_2$ and $w_0 > 0$. Therefore, $w_0 = 1$ and $w_1 = 0$ or $-1$ and $w_2 = 0$ or $-1$.</br>\n",
+    "> After applying various values to find the appropriate $y$ for each input, the resulting weights are $w_0 = 1$, $w_1 = -1$, and $w_2 = -1$.\n",
     "\n",
     "| *x<sub>1</sub>*   | *x<sub>2</sub>*   | *s*   | *y*   |\n",
     "|------------|------------|------------|------------|\n",
@@ -120,18 +120,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 1. *w<sub>0</sub>* - *w<sub>1</sub>* - *w<sub>2</sub>* - *w<sub>3</sub>* < 0\n",
-    "> 2. *w<sub>0</sub>* - *w<sub>1</sub>* - *w<sub>2</sub>* + *w<sub>3</sub>* < 0\n",
-    "> 3. *w<sub>0</sub>* - *w<sub>1</sub>* + *w<sub>2</sub>* - *w<sub>3</sub>* < 0\n",
-    "> 4. *w<sub>0</sub>* - *w<sub>1</sub>* + *w<sub>2</sub>* + *w<sub>3</sub>* > 0\n",
-    "> 5. *w<sub>0</sub>* + *w<sub>1</sub>* - *w<sub>2</sub>* - *w<sub>3</sub>* < 0\n",
-    "> 6. *w<sub>0</sub>* + *w<sub>1</sub>* - *w<sub>2</sub>* + *w<sub>3</sub>* > 0\n",
-    "> 7. *w<sub>0</sub>* + *w<sub>1</sub>* + *w<sub>2</sub>* - *w<sub>3</sub>* > 0\n",
-    "> 8. *w<sub>0</sub>* + *w<sub>1</sub>* + *w<sub>2</sub>* + *w<sub>3</sub>* > 0\n",
+    "> 1. $w_0 - w_1 - w_2 - w_3 < 0$\n",
+    "> 2. $w_0 - w_1 - w_2 + w_3 < 0$\n",
+    "> 3. $w_0 - w_1 + w_2 - w_3 < 0$\n",
+    "> 4. $w_0 - w_1 + w_2 + w_3 > 0$\n",
+    "> 5. $w_0 + w_1 - w_2 - w_3 < 0$\n",
+    "> 6. $w_0 + w_1 - w_2 + w_3 > 0$\n",
+    "> 7. $w_0 + w_1 + w_2 - w_3 > 0$\n",
+    "> 8. $w_0 + w_1 + w_2 + w_3 > 0$\n",
     "\n",
     "> Based on the 8 inequalities, they can be organized as follows:\n",
-    "> 1. *w<sub>0</sub>* < *w<sub>1</sub>*, *w<sub>0</sub>* < *w<sub>2</sub>*, *w<sub>0</sub>* < *w<sub>1</sub>* + *w<sub>2</sub>*\n",
-    "> 2. *w<sub>0</sub>* > -*w<sub>2</sub>*, *w<sub>0</sub>* > -*w<sub>3</sub>*, *w<sub>0</sub>* > -(*w<sub>2</sub>* + *w<sub>3</sub>*)\n",
+    "> 1. $w_0 < w_1$, $w_0 < w_2$, $w_0 < w_1 + w_2$\n",
+    "> 2. $w_0 > -w2$, $w_0 > -w_3$, $w_0 > -(w_2 + w_3)$\n",
     "\n",
     "> Using the organized inequalities above, the following result was obtained: $w_0 = 0$, $w_1 = 1$, $w_2 = 1$, $w_3 = 1$.\n",
     "> | $x_1$  | $x_2$   | $x_3$   | $s$   | $y$   |\n",
