--- a/ECE661_HW1_Suim_Park.ipynb
+++ b/ECE661_HW1_Suim_Park.ipynb
@@ -544,7 +544,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) (4pt) Now consider that you can only train with 1 pair of data point and target each time. In such case, the LMS algorithm should be used to find the optimal weight. Please initialize the weight vector as $W^0 = [0, 0, 0]^T$, and update the weight with the LMS algorithm. After each $epoch$ (every time you go through all the training data and loop back to the beginning), compute and record the MSE loss of the current weight on the whole dataset. Run LMS for 20 epochs with learning rate $r = 0.005$, report the weight you get in the end and plot the MSE loss in $log scale$ vs. Epochs."
+    "> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) (4pt) Now consider that you can only train with 1 pair of data point and target each time. In such case, the LMS algorithm should be used to find the optimal weight. Please initialize the weight vector as $W^0 = [0, 0, 0]^T$, and update the weight with the LMS algorithm. After each $epoch$ (every time you go through all the training data and loop back to the beginning), compute and record the MSE loss of the current weight on the whole dataset. Run LMS for 20 epochs with learning rate $r = 0.005$, report the weight you get in the end and plot the MSE loss in $log scale$ vs. Epochs.\n",
+    "\n",
+    "> $Final weights: [ 1.00068274  1.0006024  -2.00033003]$"
    ]
   },
   {
